use map instead of List for storing points that now consistent checks for cases and no longer ignores them sometimes in the PlayerData